# zkMember

./: Cargo.toml  README.md
benches/: commitment_types.rs  groth16.rs  macros-edited.rs  macros.rs  marlin.rs  pedersen.rs
src/: circuit.rs  constraints.rs  lib.rs  main.rs  member.rs  membership.rs  merkle.rs  prover.rs  verifier.rs
src/commitments/: mod.rs
src/commitments/pedersen381/: common.rs  constraint.rs  mod.rs
src/commitments/pedersen761/: common.rs  constraint.rs  mod.rs
src/core/: member.rs  organization.rs
src/ed_on_bls12_381/: circuit.rs  common.rs  mod.rs
src/examples/: marlin.rs
src/pedersen381/: common.rs  constraint.rs  mod.rs
src/pedersen761/: common.rs  constraint.rs  mod.rs
src/snarks/: marlin.rs
