[package]
name = "zkmember"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"

ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [
	"derive",
] }
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [
	"r1cs",
	"parallel",
] }

ark-groth16 = "^0.3.0"
ark-marlin = "^0.3.0"
ark-gm17 = "^0.3.0"

ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [
	"curve",
] }
ark-ed-on-bw6-761 = { version = "^0.3.0", features = ["r1cs"] }
ark-bw6-761 = { version = "^0.3.0" }


tracing = { version = "0.1", default-features = false, features = [
	"attributes",
] }
tracing-subscriber = { version = "0.2" }
ark-bn254 = { version = "0.5.0", features = ["r1cs"] }
clap = { version = "4.5.31", features = ["cargo", "derive"] }
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }
dialoguer = "0.11.0"
hex = "0.4.3"
serde_json = { version = "1.0.140", optional = true }
rand = "0.9.0"
ark-bls12-377 = { version = "0.5.0", features = ["r1cs"] }
ark-poly-commit = { version = "0.5.0", features = ["ark-r1cs-std", "r1cs"] }
ark-poly = "0.5.0"
blake2 = { version = "0.9", default-features = false }

[features]
default = ["serde", "pedersen381"]
serde = ["serde_json"]
pedersen381 = []
pedersen761 = []
benchmark = ["pedersen381", "pedersen761"]

[[bin]]
name = "zkmember"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "pedersen"
harness = false
path = "benches/pedersen.rs"
